--- a/webui/src/App.css
+++ b/webui/src/App.css
@@ -1,8 +1,13 @@
-body, html {
-  font-family: 'Courier New', Courier, monospace;
+body,
+html {
+  font-family: "Courier New", Courier, monospace;
   background-color: #ecf6f5;
   margin: 0;
-  padding: 20px 5%;
+  padding: 0;
+}
+
+footer {
+  padding: 0 10%
 }
 
 h1 {
@@ -19,16 +24,35 @@ p {
   font-size: 1.5rem;
 }
 
+button {
+  width: 150px;
+  height: 75px;
+  font-size: 1.45rem;
+  background-color: #07404c;
+  border: solid thin transparent;
+  border-radius: 15px;
+  color: #ecf6f5;
+  font-weight: bold;
+  transition: background-color 0.5s, border-color 0.5s, color 0.5s;
+}
+
+button:hover {
+  background-color: #ecf6f5;
+  border-color: #07404c;
+  color: #07404c;
+  cursor: pointer;
+}
+
 .container-icon {
   text-align: center;
   padding: 10px 20px;
   border: solid 1px #07404c;
-  border-radius: 10px;
+  border-radius: 20px;
   margin: 10px 15px;
   background-color: #eee;
 }
 
-.container-icon>img {
+.container-icon > img {
   margin-bottom: 15px;
   max-width: 100px;
 }
@@ -37,21 +61,8 @@ p {
   margin-top: 15px;
   margin-bottom: 25px;
   width: 180px;
-  padding: 30px 10px;
-  border: solid thin transparent;
-  font-size: 1.5rem;
-  font-weight: bold;
-  background-color: #07404c;
-  color: #ecf6f5;
-  border-color: transparent;
-  transition: background-color 0.5s, border-color 0.5s, color 0.5s;
 }
 
-.container-icon > a > button:hover {
-  background-color: #ecf6f5;
-  border-color: #07404c;
-  color: #07404c;
-}
 
 #react-section {
   display: flex;
@@ -64,4 +75,47 @@ p {
 #icons {
   width: 100%;
   margin: 0;
+}
+
+#content-wrapper {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.align-center {
+  text-align: center;
+}
+
+.login-container {
+  width: 50%;
+}
+
+@media all and (max-width: 767px) {
+  .login-container {
+    width: 100%;
+  }
+  input {
+    width: 100%;
+  }
+}
+
+input {
+  width: 40%;
+  height: 30px;
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 1.45rem;
+  display: block;
+  margin: 25px auto;
+  border: solid 2px #07404c;
+  border-radius: 10px;
+  padding: 5px 0;
+  padding-left: 5px;
+  transition: box-shadow 0.2s, background-color 0.2s;
+}
+
+input:focus {
+  box-shadow: 0 0 10px 5px #07404c;
+  background-color: antiquewhite;
 }
